data/derived/sp14/progs/unify/prog3551.ml.out
Characters 47-55:
  else n mod 10 @ [digitsOfInt n/10];;
       ^^^^^^^^
Error: This expression has type int but an expression was expected of type
         'a list
